// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scripts API (E2E) > createScript(), updateScript(), and deleteScript() 1`] = `
{
  "gist": "https://gist.github.com/heikowissler/d5ff5d490ab381af9405c9078096c723",
  "id": "fixed-script-id",
  "name": "MergerMode",
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "570b9f4d2a7c0e4d008da6ef",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "570b9f4b2a7c0e3b008da6ec",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "59882b370d889b84020efd3f",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "59882b370d889b84020efd6f",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
}
`;

exports[`Scripts API (E2E) > createScript(), updateScript(), and deleteScript() 2`] = `
{
  "gist": "https://gist.github.com/heikowissler/d5ff5d490ab381af9405c9078096c723",
  "id": "fixed-script-id",
  "name": "MegaScript",
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "570b9f4d2a7c0e4d008da6ef",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "570b9f4b2a7c0e3b008da6ec",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "59882b370d889b84020efd3f",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "59882b370d889b84020efd6f",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
}
`;

exports[`Scripts API (E2E) > createScript(), updateScript(), and deleteScript() 3`] = `{}`;

exports[`Scripts API (E2E) > getScript() 1`] = `
{
  "gist": "https://gist.github.com/heikowissler/d5ff5d490ab381af9405c9078096c723",
  "id": "5aead7aaf5be4b070173295b",
  "name": "merger",
  "owner": {
    "email": "user_A@scalableminds.com",
    "firstName": "user_A",
    "id": "570b9f4d2a7c0e4d008da6ef",
    "isAdmin": true,
    "isAnonymous": false,
    "isDatasetManager": true,
    "lastName": "last_A",
    "teams": [
      {
        "id": "570b9f4b2a7c0e3b008da6ec",
        "isTeamManager": true,
        "name": "team_X1",
      },
      {
        "id": "59882b370d889b84020efd3f",
        "isTeamManager": false,
        "name": "team_X3",
      },
      {
        "id": "59882b370d889b84020efd6f",
        "isTeamManager": true,
        "name": "team_X4",
      },
    ],
  },
}
`;

exports[`Scripts API (E2E) > getScripts() 1`] = `
[
  {
    "gist": "https://gist.github.com/heikowissler/d5ff5d490ab381af9405c9078096c723",
    "id": "5aead7aaf5be4b070173295b",
    "name": "merger",
    "owner": {
      "email": "user_A@scalableminds.com",
      "firstName": "user_A",
      "id": "570b9f4d2a7c0e4d008da6ef",
      "isAdmin": true,
      "isAnonymous": false,
      "isDatasetManager": true,
      "lastName": "last_A",
      "teams": [
        {
          "id": "570b9f4b2a7c0e3b008da6ec",
          "isTeamManager": true,
          "name": "team_X1",
        },
        {
          "id": "59882b370d889b84020efd3f",
          "isTeamManager": false,
          "name": "team_X3",
        },
        {
          "id": "59882b370d889b84020efd6f",
          "isTeamManager": true,
          "name": "team_X4",
        },
      ],
    },
  },
]
`;
